Bug 170003 - paragraph before table is getting below spacing from the continuous section break
Summary: paragraph before table is getting below spacing from the continuous section b...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
25.2.6.2 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:26.8.0 target:26.2.0.2 target:...
Keywords: bisected, regression
Depends on:
Blocks: DOCX-Paragraph
  Show dependency treegraph
 
Reported: 2025-12-16 14:19 UTC by Justin L
Modified: 2026-01-08 17:38 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Justin L 2025-12-16 14:19:03 UTC
The wrong spot is getting the extra below spacing that was assigned to the sectPr. In this case, the last content in the section is a table, but the  sectPr below spacing is applied to the paragraph above the table.

Steps to reproduce.
1.) Open "iny_kerelem_0313.docx" (attachment 143540 [details] from bug 104354 comment 11)

The document should only be two pages long. The second page is landscape.

Near the bottom of the first page, there are two tables separated by an empty paragraph. There should only be enough space to show the paragraph marker, without and extra below spacing.

This start with 25.2.6 commit 1326e09d019f05a82265f15c26288b4ffb7dc0c2
Author:     Justin Luth on Mon Jul 28 09:29:51 2025 +0200
    tdf#167657 writerfilter: only move sectPr bottomMargin after pageBreak
    Reviewed-on: https://gerrit.libreoffice.org/c/core/+/188298

Found with Collabora's mso-test
Comment 1 Commit Notification 2025-12-25 02:38:44 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/82936569e0e17705b6de501d7151549c51520fb9

tdf#170003 writerfilter: no belowSpacing emulation with tables

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2025-12-27 15:24:23 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/e983fc5918d399226b7aba17d0488e9720453571

tdf#170003 writerfilter: no belowSpacing emulation with tables

It will be available in 26.2.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2026-01-08 17:38:42 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/1a3bf265c77bc5bb042168cb9d7d12eaaf87b70c

tdf#170003 writerfilter: no belowSpacing emulation with tables

It will be available in 25.8.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.